smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/annotation-unclosed-list1.smithy
// Syntax error at line 5, column 1: Expected one of STRING('"'), BYTE_STRING('b"'), TEXT_BLOCK('"""'), BYTE_TEXT_BLOCK('b"""'), NUMBER, IDENTIFIER, LBRACE('{'), LBRACKET('['); but found EOF | Model
namespace com.foo
@tags(["foo", "bar"
string MyString
